// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App displays error when assets fail to load 1`] = `
<ThemeProvider
  uiTheme={
    Object {
      "palette": Object {
        "accentColor": "#f44336",
        "backdropIconColor": "#bdbdbd",
        "backgroundColor": "#eeeeee",
        "disabledColor": "#e0e0e0",
        "fadedBackgroundColor": "rgba(0, 0, 0, 0.7)",
        "fadedTextColor": "#616161",
        "highlightedDiceColor": "#f44336",
        "iconColor": "#757575",
        "modalBackgroundColor": "#ffffff",
        "noteColor": "#9e9e9e",
        "primaryColor": "#3f51b5",
        "standardDiceColor": "#424242",
        "textColor": "#000000",
      },
      "toolbar": Object {
        "container": Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      },
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      name="error"
      style={
        Object {
          "color": "#bdbdbd",
          "fontSize": 156,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#616161",
            "fontSize": 24,
            "paddingBottom": 10,
          },
          Object {
            "color": "#616161",
          },
        ]
      }
    >
      We're having some trouble!
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#616161",
            "fontSize": 18,
          },
          Object {
            "color": "#616161",
          },
        ]
      }
    >
      We couldn't load some assets.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#616161",
            "fontSize": 18,
          },
          Object {
            "color": "#616161",
          },
        ]
      }
    >
      Try again in a moment.
    </Text>
    <Button
      accent={false}
      disabled={false}
      icon="refresh"
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={false}
      style={
        Object {
          "container": Object {
            "margin": 20,
            "width": "75%",
          },
        }
      }
      text="Reload"
      upperCase={true}
    />
  </View>
</ThemeProvider>
`;

exports[`App loads assets on retry after error 1`] = `
<AppLoading
  onError={[Function]}
  onFinish={[Function]}
  startAsync={[Function]}
/>
`;

exports[`App loads assets on retry after error 2`] = `
<ThemeProvider
  uiTheme={
    Object {
      "palette": Object {
        "accentColor": "#f44336",
        "backdropIconColor": "#bdbdbd",
        "backgroundColor": "#eeeeee",
        "disabledColor": "#e0e0e0",
        "fadedBackgroundColor": "rgba(0, 0, 0, 0.7)",
        "fadedTextColor": "#616161",
        "highlightedDiceColor": "#f44336",
        "iconColor": "#757575",
        "modalBackgroundColor": "#ffffff",
        "noteColor": "#9e9e9e",
        "primaryColor": "#3f51b5",
        "standardDiceColor": "#424242",
        "textColor": "#000000",
      },
      "toolbar": Object {
        "container": Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      },
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      name="error"
      style={
        Object {
          "color": "#bdbdbd",
          "fontSize": 156,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#616161",
            "fontSize": 24,
            "paddingBottom": 10,
          },
          Object {
            "color": "#616161",
          },
        ]
      }
    >
      We're having some trouble!
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#616161",
            "fontSize": 18,
          },
          Object {
            "color": "#616161",
          },
        ]
      }
    >
      We couldn't load some assets.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#616161",
            "fontSize": 18,
          },
          Object {
            "color": "#616161",
          },
        ]
      }
    >
      Try again in a moment.
    </Text>
    <Button
      accent={false}
      disabled={false}
      icon="refresh"
      onLongPress={null}
      onPress={[Function]}
      primary={true}
      raised={false}
      style={
        Object {
          "container": Object {
            "margin": 20,
            "width": "75%",
          },
        }
      }
      text="Reload"
      upperCase={true}
    />
  </View>
</ThemeProvider>
`;

exports[`App loads assets on retry after error 3`] = `
<AppLoading
  onError={[Function]}
  onFinish={[Function]}
  startAsync={[Function]}
/>
`;

exports[`App loads assets on retry after error 4`] = `
<ThemeProvider
  uiTheme={
    Object {
      "palette": Object {
        "accentColor": "#f44336",
        "backdropIconColor": "#bdbdbd",
        "backgroundColor": "#eeeeee",
        "disabledColor": "#e0e0e0",
        "fadedBackgroundColor": "rgba(0, 0, 0, 0.7)",
        "fadedTextColor": "#616161",
        "highlightedDiceColor": "#f44336",
        "iconColor": "#757575",
        "modalBackgroundColor": "#ffffff",
        "noteColor": "#9e9e9e",
        "primaryColor": "#3f51b5",
        "standardDiceColor": "#424242",
        "textColor": "#000000",
      },
      "toolbar": Object {
        "container": Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      },
    }
  }
>
  <NavigationContainer />
</ThemeProvider>
`;

exports[`App renders properly after assets have loaded 1`] = `
<ThemeProvider
  uiTheme={
    Object {
      "palette": Object {
        "accentColor": "#f44336",
        "backdropIconColor": "#bdbdbd",
        "backgroundColor": "#eeeeee",
        "disabledColor": "#e0e0e0",
        "fadedBackgroundColor": "rgba(0, 0, 0, 0.7)",
        "fadedTextColor": "#616161",
        "highlightedDiceColor": "#f44336",
        "iconColor": "#757575",
        "modalBackgroundColor": "#ffffff",
        "noteColor": "#9e9e9e",
        "primaryColor": "#3f51b5",
        "standardDiceColor": "#424242",
        "textColor": "#000000",
      },
      "toolbar": Object {
        "container": Object {
          "elevation": 0,
          "shadowOffset": Object {
            "height": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      },
    }
  }
>
  <NavigationContainer />
</ThemeProvider>
`;

exports[`App renders properly before assets have loaded 1`] = `
<AppLoading
  onError={[Function]}
  onFinish={[Function]}
  startAsync={[Function]}
/>
`;
